# IA-Classic-vs-Genetic-Algorithm

./: .gitignore  README.md  experiments.sh  pyproject.toml
src/: __init__.py  analizador.py  casilla_laberinto.py  coordenada.py  cuadrilla.py  exceptions.py  jugador.py  laberinto.py  main.py  menu.py  movimientos.py  simulacion.py  tipo_jugador.py
src/jugador/: __init__.py  jugador.py  jugador_a_estrella.py  jugador_genetico.py  jugador_greedy.py  jugador_q_learning.py  jugador_q_learning_adaptado.py  jugador_q_learning_estrella.py  jugador_random.py
src/models/: __init__.py  casilla_laberinto.py  coordenada.py  movimientos.py
