[project]
name = "IA-Classic-vs-Genetic-Algorithm"
version = "0.1.0"
description = "Default template for PDM package"
dependencies = ["black>=25.1.0", "isort>=6.0.1", "pydocstyle>=6.3.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
